TAG: qcreports_db-6-0-0-5
DATE: 07/28/2015
STAFF: lec
CHANGES: 
1) TR11750/postgres

TAG: qcreports_db-6-0-0-4
DATE: 07/27/2015
STAFF: lnh
CHANGES:
1) mgd/GO_EvidenceProperty.py: Added a SERVER_TYPE check - only send email when on prod
2) Configuration.default: Added new flag SERVER_TYPE=INSTALL_TYPE

TAG: qcreports_db-6-0-0-3
TAG: qcreports_db-6-0-0-2
TAG: qcreports_db-6-0-0-1
DATE: 07/22/2015, 07/23/2015
STAFF: lec
CHANGES: 
1) TR11750/postgres

TAG: qcreports_db-5-2-2-11
DATE: 7/14/15
STAFF: pf
CHANGES: adding order by to GXD_Mouse_Developmental_Anatomy.rpt

TAG: qcreports_db-5-2-2-10
DATE: 07/14/2015
STAFF: lec
CHANGES: TR11750
change "= null" to "is null" for Postgres support
1) mgd/GO_Combined_Report.py
   mgd/VOC_InvalidInferred.py
   mgd/GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-5-2-2-9
TAG: qcreports_db-5-2-2-8
DATE: 07/10/2015, 07/13/2015
STAFF: lec
CHANGES: TR11332
1) mgd/GO_EvidenceProperty.py

TAG: qcreports_db-5-2-2-7
DATE: 07/06/2015
STAFF: lec
CHANGES: TR11740
1) mgd/GXD_EMAPS_MappingNameChecks.py

TAG: qcreports_db-5-2-2-6
DATE: 6/30/15
STAFF: pf
CHANGES: pirsf updates for postgres

TAG: qcreports_db-5-2-2-5
TAG: qcreports_db-5-2-2-4
DATE: 06/08/2015
STAFF: lnh
CHANGES:
1) Added a new QC report weekly/GO_eco_multipleEvidence.py - TR12045
2) weekly/GO_eco_multipleEvidence.py: Changed python path in the shebang 
           from /usr/bin/env python to /usr/local/bin/python

TAG: qcreports_db-5-2-2-3
TAG: qcreports_db-5-2-2-2
DATE: 06/08/2015
STAFF: lec
CHANGES:
1) PRB_Strain_MultNoAlleles.sql
2) PRB_Strain_SingleNoAlleles1.sql
3) PRB_Strain_SingleNoAlleles2.sql
4) PRB_StrainStd.sql

TAG: qcreports_db-5-2-2-1
DATE: 05/21/2015
STAFF: lec
CHANGES:
1) qcr.html/Mapping tab is obsolete
2) weekly/MLD_Triage.sql

TAG: qcreports_db-5-2-1-27
DATE: 05/18/2015
STAFF: dbm
CHANGES:
1) weekly/MTB_Triage.py: Handle a possible null in the primary field

TAG: qcreports_db-5-2-1-26
TAG: qcreports_db-5-2-1-25
TAG: qcreports_db-5-2-1-24
DATE: 05/15/2015
STAFF: lec