@@ -272,6 +272,7 @@ be used at times to test reports for <I>future</I> public consumption.)
     <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_3.rpt">QTL markers that have no mapping but have allele associations</A> <B>(djr)</B>
     <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_4.rpt">QTL markers that have assigned reference of J:23000 or J:85000</A> <B>(djr)</B>
     <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL_5.rpt">QTL markers that are in Nomen and have not been broadcast</A> <B>(djr)</B>
+    <LI><A HREF="/data/reports/qcreports_db/output/QTL_Triage.rpt">Master Bib QTL Indexing Report</A> <B>(djr)</B>
     </OL>
 </OL>
 
